--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
-#logging.file: ./target/app.log
-#logging.level.org.springframework.web: DEBUG
-#logging.level.org.apache.tiles: DEBUG
+logging.file: ./target/app.log
+logging.level.org.springframework.web: TRACE
+logging.level.org.springframework.security: TRACE
+logging.level.org.apache.tiles: DEBUG
 
